nginx on mac using a zip file running ok!!!